<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gcd"
            android:title="@string/gcd" />
        <item
            android:id="@+id/nav_factors"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_prime"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_modularexpo"
            android:title="@string/modularexpo" />
        <item
            android:id="@+id/nav_modularmultinver"
            android:title="@string/modularmultinver" />
        <item
            android:id="@+id/nav_bigfactorial"
            android:title="@string/bigfactorial" />
        <item
            android:id="@+id/nav_nCr"
            android:title="@string/ncr" />
        <item
            android:id="@+id/nav_fibonacci"
            android:title="@string/checkfibonacci" />
        <item
            android:id="@+id/nav_calculator"
            android:title="@string/calculator" />
    </group>
</menu>
